Construindo lado esquerdo do sorteador.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,37 @@
 </head>
 
 <body>
+    <img class="logo" src="./img/logo.svg" alt="">
 
+    <div class="container">
+        <div class="app-info">
+            <header>
+                <p>ONLINE - GRATUITO</p>
+                <h1 class="titulo-sorteador">SORTEADOR DE NÚMEROS</h1>
+            </header>
+            <div class="questions">
+                <div class="question-item">
+                    <div class="question-title">
+                        <img src="./img/user.svg" alt="icone de usuario">
+                        <p>Como funciona o sorteador de números?</p>
+                    </div>
+                    <p class="answer">O sorteador utiliza um algoritmo de geração aleatória para criar números dentro do intervalo especificado pelo usuário.</p>
+                </div>
+
+                <div class="question-item">
+                    <div class="question-title">
+                        <img src="./img/user.svg" alt="icone de usuario">
+                        <p>Como funciona o sorteador de números?</p>
+                    </div>
+                    <p class="answer">O sorteador utiliza um algoritmo de geração aleatória para criar números dentro do intervalo especificado pelo usuário.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="app-form">
+
+        </div>
+    </div>
 </body>
 
 </html>
