--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+
     <img class="logo" src="./img/logo.svg" alt="">
 
     <div class="container">
@@ -23,7 +24,7 @@
                 <p>ONLINE - GRATUITO</p>
                 <h1 class="titulo-sorteador">SORTEADOR DE NÚMEROS</h1>
             </header>
-            <div class="questions">
+            <div class="questions-desktop">
                 <div class="question-item">
                     <div class="question-title">
                         <img src="./img/user.svg" alt="icone de usuario">
@@ -87,6 +88,30 @@
                 </button>
         </div>
         </form>
+
+        <div class="questions-mobile">
+            <div class="question-item">
+                <div class="question-title">
+                    <img src="./img/user.svg" alt="icone de usuario">
+                </div>
+                <div>
+                    <p class="question">Como funciona o sorteador de números?</p>
+                    <p class="answer">O sorteador utiliza um algoritmo de geração aleatória para criar números
+                        dentro do intervalo especificado pelo usuário.</p>
+                </div>
+            </div>
+
+            <div class="question-item">
+                <div class="question-title">
+                    <img src="./img/user.svg" alt="icone de usuario">
+                </div>
+                <div>
+                    <p class="question">Posso escolher o intervalo dos números?</p>
+                    <p class="answer">Sim, você pode definir os valores mínimo e máximo para o intervalo dos números
+                        sorteados.</p>
+                </div>
+            </div>
+        </div>
     </div>
     </div>
 </body>
