Ajuste bordas animadas.

--- a/index.html
+++ b/index.html
@@ -60,17 +60,23 @@
                 <div class="form-fields">
                     <div class="input-item">
                         <label for="number">NÚMEROS</label>
-                        <input type="text" id="number" name="number" required>
+                        <div class="wrapper">
+                            <input type="text" id="number" name="number" required>
+                        </div>
                     </div>
 
                     <div class="input-item">
                         <label for="from">DE</label>
-                        <input type="text" id="from" name="from" required>
+                        <div class="wrapper">
+                            <input type="text" id="from" name="from" required>
+                        </div>
                     </div>
 
                     <div class="input-item">
                         <label for="to">ATÉ</label>
-                        <input type="text" id="to" name="to" required>
+                        <div class="wrapper">
+                            <input type="text" id="to" name="to" required>
+                        </div>
                     </div>
                 </div>
 
